@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline


skinparam classAttributeIconSize 0


class CancelAnEntryUI{
}


class CancelAnEntryController{
-Agenda agendaRepository
    + CancelAnEntryController(agenda)
 }

class Repositories {
    - Repositories(): Repositories
    + getInstance() : Repositories
    + getAgenda() : Repositories
    + getEntries() : Repositories
}


class Agenda {
    + getAgenda().getEntries()

}

class  Entry{
        -title
        -description
        -degreeurgency
        -datebegin
        -dateend
        -state
        -greenSpace

}

class EntryDto{
+Entry
+Date
+Time
}


Agenda --> "*" Entry: contains
CancelAnEntryUI .>  CancelAnEntryController
CancelAnEntryController ...l> Repositories
CancelAnEntryUI .> EntryDto
CancelAnEntryController ..> EntryDto
Repositories -> Repositories : instance
Repositories "1" --> "*" Entry
Repositories ---> "1" Agenda

 CancelAnEntryController ....>  Entry
 CancelAnEntryController ...> "1" Agenda
@enduml